--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hello</title>
+	<title>Gallery</title>
 </head>
 <body>
-<h1>hiii </h1>
+<h1>Welcome to Photo Gallery</h1>
 </body>
 </html>
